<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="edu.bluejack24_2.domojo.viewmodels.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            tools:context=".views.ui.LoginActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:text="@string/login_title"
                android:textColor="?attr/colorPrimary"
                android:textSize="32sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email"
                app:boxBackgroundColor="?attr/colorSurfaceContainer"
                app:boxStrokeColor="@color/color4"
                app:hintTextColor="@color/color3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={viewModel.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/email_error_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/error_text"
                android:textColor="@color/red"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                app:boxBackgroundColor="?attr/colorSurfaceContainer"
                app:boxStrokeColor="@color/color4"
                app:hintTextColor="@color/color3"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={viewModel.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/password_error_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/error_text"
                android:textColor="@color/red"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:indeterminateTint="@color/color4"
                android:visibility="gone" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/color4"
                android:text="@string/login_button"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/signup_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="48dp"
                android:text="@string/login_link"
                android:textColor="?attr/colorPrimaryContainer"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>